--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">3605FirstScientists</string>
+    <string name="mapbox_access_token">pk.eyJ1Ijoicnh1MjEwIiwiYSI6ImNrcjNnYzc2dDEwbmcyeG55MHByMHR1dXEifQ.MAYVSImKkRT0YIfTF3mVAg</string>
 </resources>
