Tahmin - Learn Screen (Recycler View) + Action Plan Screens which includes Reconciliation Screen, Climate Change Screen and Community Screen. RecyclerView OnClick Listener does NOT work - need to fix.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">3605FirstScientists</string>
+    <string name="app_name">Red Cross Reform</string>
     <string name="mapbox_access_token">pk.eyJ1Ijoicnh1MjEwIiwiYSI6ImNrcjNnYzc2dDEwbmcyeG55MHByMHR1dXEifQ.MAYVSImKkRT0YIfTF3mVAg</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
